# Masters_degree

./: .gitignore  CLAUDE.md  README.md  RISK_ANALYSIS.md  THESIS_PROPOSAL_v0.2.md  check_progress.py  pyproject.toml  run_phase1.bat  run_phase2.bat  run_phase2_ablation.bat  run_phase3.bat
.claude/: settings.json  settings.local.json
.moai/: manifest.json  status_line.sh
configs/autoresearch/: program.md
configs/finetune/: base_qlora.yaml
configs/models/: _template.yaml  florence2_large.yaml  gemma4_e2b.yaml  qwen25_vl_3b.yaml  qwen25_vl_7b.yaml  qwen3_vl_2b.yaml  smolvlm2_2b.yaml
docs/: RISK_ANALYSIS_v0.2.md  RISK_ANALYSIS_v0.3.md  THESIS_PROPOSAL.md  THESIS_PROPOSAL_FINAL.md  THESIS_PROPOSAL_FINAL_v0.2.md  THESIS_PROPOSAL_FINAL_v0.3.md  THESIS_PROPOSAL_v0.3.md  adding_new_model.md  phase1_work_log.md
results/phase1_baseline/: florence2-large_vqa_rad_seed42.json  phase1_intermediate.json  phase1_summary.csv  qwen25-vl-3b_pathvqa_seed123.json  qwen25-vl-3b_pathvqa_seed42.json  qwen25-vl-3b_pathvqa_seed456.json  qwen25-vl-3b_slake_seed123.json  qwen25-vl-3b_slake_seed42.json  qwen25-vl-3b_slake_seed456.json  qwen25-vl-3b_vqa_rad_seed123.json  qwen25-vl-3b_vqa_rad_seed42.json  qwen25-vl-3b_vqa_rad_seed456.json  qwen3-vl-2b_pathvqa_seed123.json  qwen3-vl-2b_pathvqa_seed42.json  qwen3-vl-2b_pathvqa_seed456.json  qwen3-vl-2b_slake_seed123.json  qwen3-vl-2b_slake_seed42.json  qwen3-vl-2b_slake_seed456.json  qwen3-vl-2b_vqa_rad_seed123.json  qwen3-vl-2b_vqa_rad_seed42.json  qwen3-vl-2b_vqa_rad_seed456.json  smolvlm2-2b_pathvqa_seed123.json  smolvlm2-2b_pathvqa_seed42.json  smolvlm2-2b_pathvqa_seed456.json  smolvlm2-2b_slake_seed123.json  (+5 more)
scripts/: md_to_pdf.py  run_phase1_gemma4.py  run_phase1_single.py  run_phase2_ablation.sh  run_phase2_main.sh  run_phase3.sh  runpod_phase1.sh  runpod_phase1_gemma4.sh  runpod_setup.sh  test_model_compat.py
tests/: florence2_step_test.py  test_gemma4_compat.py
(+28 files in other folders)
